스타일 구현

--- a/src/assets/styles/feeds.scss
+++ b/src/assets/styles/feeds.scss
@@ -1,44 +1,14 @@
 @import "./variables.scss";
 
-* {
-  box-sizing: border-box;
-}
-body,
-html {
-  margin: 0;
-  padding: 0;
-}
-#app {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  @include device {
-    border: 5px #f4f5f7 solid;
-  }
-}
-#nav {
-  width: 100%;
-  background: $--unnamed-color-ffffff 0% 0% no-repeat padding-box;
-  box-shadow: 0px 1px 5px #00000012;
-  height: 70px;
-  font: normal normal normal 16px/25px Noto Sans CJK KR;
-  display: flex;
-  justify-content: center;
-  div {
-    width: 100%;
-    max-width: 1140px;
-    margin: auto;
-    padding: 5px;
-  }
-}
-
 .home {
-  flex-wrap: nowrap;
-  display: flex;
   max-width: 1140px;
   width: 100%;
+
+  display: flex;
+  flex-wrap: nowrap;
   flex-direction: row;
   justify-content: space-between;
+
   @include desktop {
     padding: 50px 5px 0 5px;
   }
@@ -54,10 +24,10 @@ html {
     button {
       width: 100%;
       border: 0;
-      background: #00c854 0% 0% no-repeat padding-box;
+      background: $color-green 0% 0% no-repeat padding-box;
       height: 60px;
-      color: $--unnamed-color-ffffff;
-      font: normal normal bold 22px/25px SpoqaHanSans;
+      color: #ffffff;
+      @include btn-font;
       border-radius: 5px;
     }
   }
@@ -68,38 +38,29 @@ html {
       padding: 0 10px;
     }
     @include device {
-      background: $--unnamed-color-f4f5f7 0% 0% no-repeat padding-box;
+      background: #f4f5f7;
     }
   }
 }
-// @include device {
-//   .home,
-//   .main-section {
-//     padding: 0px;
-//   }
-// }
-a {
-  text-decoration: none;
-  color: unset;
-}
+
 .options {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: white;
-  margin: 2px 0;
   padding: 10px 0;
+  margin: 2px 0;
 }
 .order {
   // width: 100%;
   button {
-    color: $--unnamed-color-495057;
+    color: #495057;
     background-color: white;
     border: 0;
     font: normal normal normal 13px/25px SpoqaHanSans;
     cursor: pointer;
     &.active::before {
-      background: #00c854;
+      background: $color-green;
     }
     &::before {
       content: "";
@@ -108,7 +69,7 @@ a {
       height: 6px;
       // margin: -5px 10px 0 0;
       vertical-align: middle;
-      background: #e1e4e7;
+      background: $color-border;
       border-radius: 50%;
       // color: ;
     }
@@ -118,17 +79,16 @@ a {
   background: #ffffff;
   width: 48px;
   height: 24px;
-  background: $--unnamed-color-ffffff 0% 0% no-repeat padding-box;
-  border: 1px solid #e1e4e7;
+  color: #adb5bd;
+  border: 1px solid $color-border;
   border-radius: 3px;
 }
 .card {
-  background: $--unnamed-color-ffffff 0% 0% no-repeat padding-box;
   padding: 20px 30px;
   margin: 5px 0;
-
+  background-color: #ffffff;
   @include desktop {
-    border: 1px solid #e1e4e7;
+    border: 1px solid $color-border;
     margin: 14px 0 30px 0;
     border-radius: 5px;
   }
@@ -139,23 +99,22 @@ a {
 
   .inline {
     display: flex;
-    font-size: 13px;
-    align-items: center;
+    @include sub-font;
     @at-root.space-between {
       justify-content: space-between;
       color: #7e848a;
+      padding-bottom: 10px;
     }
     @at-root.flex-start {
-      border-top: 1px #e1e4e7 solid;
-      margin-top: 13px;
+      border-top: 1px $color-border solid;
       padding-top: 13px;
-      margin-bottom: 17px;
+      margin-top: 13px 0 17px 0;
     }
     .user_id {
-      color: $--unnamed-color-00c854;
+      color: $color-green;
+      border-right: 1px $color-border solid;
       padding-right: 10px;
       margin-right: 10px;
-      border-right: 1px #e1e4e7 solid;
     }
   }
   .inline-text {
@@ -170,13 +129,11 @@ a {
   }
   .title,
   .ads-title {
-    text-align: left;
-    font: normal normal bold 18px/28px SpoqaHanSans;
-    color: #282c30;
+    @include title-font;
   }
-  .contents .ads-contents {
-    color: $--unnamed-color-495057;
-    font: normal normal normal 16px/25px SpoqaHanSans;
+  .contents,
+  .ads-contents {
+    @include content-font;
   }
 
   img {
@@ -204,29 +161,22 @@ a {
   .ads-contents {
     overflow: hidden;
     text-overflow: ellipsis;
+    word-wrap: break-word;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    word-wrap: break-word;
     @include desktop {
       margin: 0 30px;
     }
   }
   .ads-title {
     -webkit-line-clamp: 2;
-    font: normal normal bold 18px/28px SpoqaHanSans;
-    color: #282c30;
   }
   .ads-contents {
     -webkit-line-clamp: 4;
-    color: $--unnamed-color-495057;
-    font: normal normal normal 16px/25px SpoqaHanSans;
   }
   .sponsered {
     padding-bottom: 16px;
-    text-align: left;
-    font: normal normal normal 13px/25px SpoqaHanSans;
-    letter-spacing: 0px;
+    @include sub-font;
     color: #adb5bd;
-    opacity: 1;
   }
 }
