--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,2 +1,40 @@
 @import "./variables.scss";
 @import "./feeds.scss";
+@import "./detail.scss";
+@import "./modal.scss";
+
+* {
+  box-sizing: border-box;
+}
+body,
+html {
+  padding: 0;
+  margin: 0;
+}
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+#app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @include device {
+    border: 5px #f4f5f7 solid;
+  }
+}
+#nav {
+  width: 100%;
+  box-shadow: 0px 1px 5px #00000012;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  @include content-font;
+  div {
+    width: 100%;
+    max-width: 1140px;
+    padding: 5px;
+    margin: auto;
+  }
+}
